--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,7 +352,8 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.png");
+  /*background: url("../img/hero-bg.png");*/
+  background: url("../img/hero-logo.png");
   position: relative;
 }
 
