--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,7 +353,7 @@ h6 {
   width: 100%;
   height: 100vh;
   /*background: url("../img/hero-bg.png");*/
-  background: url("../img/hero-bg.png");
+  background: url("../img/back.png");
   position: relative;
 }
 
