--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1619,7 +1619,8 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: url("../img/footer-bg.jpg") center center no-repeat;
+/*   background: url("../img/footer-bg.jpg") center center no-repeat; */
+  background: url("../img/cyber.jpeg") center center no-repeat;
   color: #fff;
   font-size: 14px;
   position: relative;
